Fix the wrapping of long entity titles.

--- a/jujugui/static/gui/src/app/components/entity-details/header/_header.scss
+++ b/jujugui/static/gui/src/app/components/entity-details/header/_header.scss
@@ -118,18 +118,17 @@
   }
 
   &__icon {
+    float: left;
     border-radius: 50%;
     height: 96px;
     width: 96px;
-    display: inline-block;
     vertical-align: top;
     margin: 0 30px 0 0;
   }
 
   &__title {
-    line-height: 96px;
-    display: inline-block;
-    margin-bottom: 0;
+    line-height: 150%;
+    margin: 15px 0 0 0;
     color: $cool-grey;
     font-size: 2.8125em;
     text-transform: capitalize;
